configured for azure web app service deployment

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "order-service",
+  "name": "order-service-algonquin-pet-store",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests available\""
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2"
   }
 }
